worker can now access the coordinates in dummy function

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -1,4 +1,4 @@
-CC=g++
+CC=g++ -g
 
 
 landebahn: landebahn.c tile_manager.o tile_worker.o
@@ -8,4 +8,4 @@ tile_manager.o: tile_manager.cpp tile_manager.h
 	$(CC) -c tile_manager.cpp -o tile_manager.o -I../readInTiff/src/
 
 tile_worker.o: tile_worker.cpp tile_worker.h
-	$(CC) -c tile_worker.cpp -o tile_worker.o
+	$(CC) -c tile_worker.cpp -o tile_worker.o -I../readInTiff/src/
