added doxystyle documentation (not complete)

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -1,6 +1,13 @@
+
 CC=g++ -g
 
+all: landebahn documentation
 
+clean:
+	rm landebahn || true
+	rm -rf latex || true
+	rm -rf html || true
+	rm *.o || true
 landebahn: landebahn.c tile_manager.o tile_worker.o
 	$(CC) -o landebahn landebahn.c ../readInTiff/src/readInTiff.o tile_manager.o tile_worker.o -I../readInTiff/src/  -ltiff
 
@@ -9,3 +16,8 @@ tile_manager.o: tile_manager.cpp tile_manager.h
 
 tile_worker.o: tile_worker.cpp tile_worker.h
 	$(CC) -c tile_worker.cpp -o tile_worker.o -I../readInTiff/src/
+
+documentation: html/index.html
+
+html/index.html: tile_manager.cpp 
+	doxygen doxystyle
