auto build tiff routines

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -8,7 +8,7 @@ clean:
 	rm -rf latex || true
 	rm -rf html || true
 	rm *.o || true
-landebahn: landebahn.c tile_manager.o tile_worker.o
+landebahn: landebahn.c tile_manager.o tile_worker.o ../readInTiff/src/readInTiff.o
 	$(CC) -o landebahn landebahn.c ../readInTiff/src/readInTiff.o tile_manager.o tile_worker.o -I../readInTiff/src/  -ltiff
 
 tile_manager.o: tile_manager.cpp tile_manager.h
@@ -16,6 +16,9 @@ tile_manager.o: tile_manager.cpp tile_manager.h
 
 tile_worker.o: tile_worker.cpp tile_worker.h
 	$(CC) -c tile_worker.cpp -o tile_worker.o -I../readInTiff/src/
+
+../readInTiff/src/readInTiff.o:
+	$(MAKE) -C ../readInTiff/src
 
 documentation: html/index.html
 
