added non default include file to readInTiff. Restructured landebahn project

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -1,26 +1,30 @@
 
 CC=g++ -g
 
-all: landebahn documentation
+all: checkdir ./bin/landebahn documentation
 
 clean:
-	rm landebahn || true
+	rm ./bin/landebahn || true
 	rm -rf latex || true
 	rm -rf html || true
-	rm *.o || true
-landebahn: landebahn.c tile_manager.o tile_worker.o ../readInTiff/src/readInTiff.o
-	$(CC) -o landebahn landebahn.c ../readInTiff/src/readInTiff.o tile_manager.o tile_worker.o -I../readInTiff/src/  -ltiff
+	rm ./obj/*.o || true
+./bin/landebahn: ./main/landebahn.c ./obj/tile_manager.o ./obj/tile_worker.o ../readInTiff/src/readInTiff.o
+	$(CC) -o ./bin/landebahn ./main/landebahn.c ../readInTiff/src/readInTiff.o ./obj/tile_manager.o ./obj/tile_worker.o -I../readInTiff/src/ -I./include  -ltiff
 
-tile_manager.o: tile_manager.cpp tile_manager.h
-	$(CC) -c tile_manager.cpp -o tile_manager.o -I../readInTiff/src/
+./obj/tile_manager.o: ./src/tile_manager.cpp ./include/tile_manager.h
+	$(CC) -c ./src/tile_manager.cpp -o ./obj/tile_manager.o -I../readInTiff/src/ -I./include
 
-tile_worker.o: tile_worker.cpp tile_worker.h
-	$(CC) -c tile_worker.cpp -o tile_worker.o -I../readInTiff/src/
+./obj/tile_worker.o: ./src/tile_worker.cpp ./include/tile_worker.h
+	$(CC) -c ./src/tile_worker.cpp -o ./obj/tile_worker.o -I../readInTiff/src/ -I./include
 
 ../readInTiff/src/readInTiff.o:
 	$(MAKE) -C ../readInTiff/src
 
 documentation: html/index.html
 
-html/index.html: tile_manager.cpp tile_worker.cpp tile_worker.h tile_manager.h 
+checkdir:
+	mkdir bin || true
+	mkdir obj || true
+
+html/index.html: ./src/tile_manager.cpp ./src/tile_worker.cpp ./include/tile_worker.h ./include/tile_manager.h 
 	doxygen doxystyle
