--- a/src/GeoTiff_Handler/src/Makefile
+++ b/src/GeoTiff_Handler/src/Makefile
@@ -11,8 +11,11 @@ readInTiff.o: readInTiff.c
 GeoTiffHandler.o: GeoTiffHandler.cpp
 	$(CC) -c GeoTiffHandler.cpp -I../../gdal/gdal-2.2.1/gcore -I../../gdal/gdal-2.2.1/port -I../../gdal/gdal-2.2.1/ogr
 
-GeoTiffHandlerTest: GeoTiffHandlerTest.cpp readInTiff.o pcs.csv
+GeoTiffHandlerTest: GeoTiffHandlerTest.cpp readInTiff.o pcs.csv gdal
 	$(CC) -o GeoTiffHandlerTest  GeoTiffHandlerTest.cpp -I../../gdal/gdal-2.2.1/gcore -I../../gdal/gdal-2.2.1/port -I../../gdal/gdal-2.2.1/ogr GeoTiffHandler.o readInTiff.o ../../gdal/gdal-2.2.1/.libs/libgdal.so -ltiff 
 
 pcs.csv: ../../gdal/gdal-2.2.1/data/pcs.csv
 	cp  ../../gdal/gdal-2.2.1/data/pcs.csv .
+
+gdal:
+	 $(MAKE) -C ../../gdal
