--- a/src/1597_LandingClient/package.json
+++ b/src/1597_LandingClient/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-leaflet": "^1.4.0",
-    "react-leaflet-draw": "^0.16.0",
+    "react-leaflet-geojson-cluster": "^0.1.8",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.6",
