start library for final client

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -7,7 +7,7 @@ else
     CFLAGS=-DNDEBUG
 endif
 
-all: checkdir ./bin/landebahn documentation
+all: checkdir ./bin/landebahn documentation ./lib/plane_library.a 
 
 clean:
 	rm ./bin/landebahn || true
@@ -23,7 +23,11 @@ clean:
 ./obj/tile_worker.o: ./src/tile_worker.cpp ./include/tile_worker.h
 	$(CC) $(CFLAGS) -c ./src/tile_worker.cpp -o ./obj/tile_worker.o -I../readInTiff/src/ -I./include -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src
 
+./obj/plane_library.o: ./src/plane_library.cpp
+	$(CC) $(CFLAGS) -c ./src/plane_library.cpp -o ./obj/plane_library.o -I../readInTiff/src/ -I./include -I../GeoTiff_Handler/src -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr
 
+./lib/plane_library.a: ./obj/plane_library.o
+	ar rcs ./lib/plane_library.a ./obj/plane_library.o
 
 ../GeoTiff_handler/src/readInTiff.o:
 	$(MAKE) -C ../GeoTiff_Handler/src/
@@ -39,6 +43,7 @@ documentation: html/index.html
 checkdir:
 	mkdir bin || true
 	mkdir obj || true
+	mkdir lib || true
 
 html/index.html: ./src/tile_manager.cpp ./src/tile_worker.cpp ./include/tile_worker.h ./include/tile_manager.h 
 	doxygen doxystyle
