- Debug-Ausgaben im DatabaseManager unterdrückt - in 1597_Fakedurchmusterung.cpp wird nur noch ein einzelner Thread erzeugt (Das waren vorher 8, also soviele, wie Kerne vorhanden) - Ergänzungen im Makefile, so dass es bei mir auch baut (search path for -I/usr/include/gdal/)

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -15,13 +15,13 @@ clean:
 	rm -rf html || true
 	rm ./obj/*.o || true
 ./bin/landebahn: ./main/landebahn.c ./obj/landing_plane.o ./obj/tile_manager.o ./obj/tile_worker.o ./obj/thread_data.o ../GeoTiff_Handler/src/GeoTiffHandler.o ../GeoTiff_Handler/src/readInTiff.o ./bin/pcs.csv
-	$(CC) $(CFLAGS) -o ./bin/landebahn ./main/landebahn.c ../GeoTiff_Handler/src/GeoTiffHandler.o ../GeoTiff_Handler/src/readInTiff.o ./obj/tile_manager.o ./obj/tile_worker.o ./obj/landing_plane.o ./obj/thread_data.o -I../readInTiff/src/ -I./include   -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/ ../gdal/gdal-2.2.1/.libs/libgdal.so ../1597_searchEngineWrapper/Debug/src/1597_ipc_listener.o  -ltiff -lpthread
+	$(CC) $(CFLAGS) -o ./bin/landebahn ./main/landebahn.c ../GeoTiff_Handler/src/GeoTiffHandler.o ../GeoTiff_Handler/src/readInTiff.o ./obj/tile_manager.o ./obj/tile_worker.o ./obj/landing_plane.o ./obj/thread_data.o -I../readInTiff/src/ -I./include   -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/ -I/usr/include/gdal/ ../gdal/gdal-2.2.1/.libs/libgdal.so ../1597_searchEngineWrapper/Debug/src/1597_ipc_listener.o  -ltiff -lpthread
 
 ./obj/tile_manager.o: ./src/tile_manager.cpp ./include/tile_manager.h
-	$(CC) $(CFLAGS) -c ./src/tile_manager.cpp -o ./obj/tile_manager.o -I../readInTiff/src/ -I./include -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/
+	$(CC) $(CFLAGS) -c ./src/tile_manager.cpp -o ./obj/tile_manager.o -I../readInTiff/src/ -I./include -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/ -I/usr/include/gdal/
 
 ./obj/tile_worker.o: ./src/tile_worker.cpp ./include/tile_worker.h
-	$(CC) $(CFLAGS) -c ./src/tile_worker.cpp -o ./obj/tile_worker.o -I../readInTiff/src/ -I./include -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/
+	$(CC) $(CFLAGS) -c ./src/tile_worker.cpp -o ./obj/tile_worker.o -I../readInTiff/src/ -I./include -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/ -I/usr/include/gdal/
 
 
 ./obj/landing_plane.o: ./src/landing_plane.cpp ./include/landing_plane.h
@@ -37,10 +37,11 @@ clean:
 	ar rcs ./lib/plane_library.a ./obj/plane_library.o ./obj/tile_worker.o ./obj/landing_plane.o ./obj/thread_data.o
 
 ../GeoTiff_handler/src/readInTiff.o:
-	$(MAKE) -C ../GeoTiff_Handler/src/
+	$(MAKE) -C ../GeoTiff_Handler/src/ -I/usr/include/gdal/
 
 ../GeoTiff_handler/src/GeoTiffHandler.o:
-	$(MAKE) -C ../GeoTiff_Handler/src/
+	$(MAKE) -C ../GeoTiff_Handler/src/ -I/usr/include/gdal/
+
 
 ./bin/pcs.csv: ../gdal/gdal-2.2.1/data/pcs.csv
 	cp  ../gdal/gdal-2.2.1/data/pcs.csv ./bin
