--- a/src/1597_DatabaseManager/package.json
+++ b/src/1597_DatabaseManager/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www --tiffpath=/home/eckstein/dev/LandingPlanes/terrain --wrapper=/home/eckstein/git/LandingPlanes/src/1597_searchEngineWrapper/Debug/1597_searchEngineWrapper --clientpath='../1597_LandingClient'"
   },
   "dependencies": {
+    "@turf/convex": "^4.6.0",
+    "@turf/distance": "^4.6.0",
+    "@turf/helpers": "^4.6.0",
+    "@turf/simplify": "^4.6.0",
     "@turf/union": "^4.6.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
@@ -20,9 +24,6 @@
     "node-ipc": "^9.0.1",
     "ramda": "^0.24.1",
     "serve-favicon": "~2.4.2",
-    "turf": "^3.0.14",
-    "turf-explode": "^3.0.12",
-    "turf-union": "^3.0.12",
     "yargs": "^8.0.2"
   }
 }
