- Kommando Skript 'npm run cleanup' für manuellen Merge zugefügt

--- a/src/1597_DatabaseManager/package.json
+++ b/src/1597_DatabaseManager/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www --tiffpath=/home/eckstein/dev/LandingPlanes/terrain --wrapper=/home/eckstein/git/LandingPlanes/src/1597_searchEngineWrapper/Debug/1597_searchEngineWrapper --clientpath='../1597_LandingClient'"
+    "start": "node ./bin/www --tiffpath=/home/eckstein/dev/LandingPlanes/terrain --wrapper=/home/eckstein/git/LandingPlanes/src/1597_searchEngineWrapper/Debug/1597_searchEngineWrapper --clientpath='../1597_LandingClient'",
+    "cleanup": "node ./bin/cleanUpDbRunner.js"
   },
   "dependencies": {
     "@turf/convex": "^4.6.0",
