--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -14,10 +14,10 @@ clean:
 	rm -rf latex || true
 	rm -rf html || true
 	rm ./obj/*.o || true
-./bin/landebahn: ./main/landebahn.c ./obj/landing_plane.o ./obj/tile_manager.o ./obj/tile_worker.o ./obj/thread_data.o ../GeoTiff_Handler/src/GeoTiffHandler.o ../GeoTiff_Handler/src/readInTiff.o ./bin/pcs.csv
+./bin/landebahn: ./main/landebahn.c ./obj/landing_plane.o ./obj/tile_manager.o ./obj/tile_worker.o ./obj/thread_data.o ../GeoTiff_Handler/src/GeoTiffHandler.o ../GeoTiff_Handler/src/readInTiff.o ./bin/pcs.csv ../1597_searchEngineWrapper/Debug/src/1597_ipc_listener.o
 	$(CC) $(CFLAGS) -o ./bin/landebahn ./main/landebahn.c ../GeoTiff_Handler/src/GeoTiffHandler.o ../GeoTiff_Handler/src/readInTiff.o ./obj/tile_manager.o ./obj/tile_worker.o ./obj/landing_plane.o ./obj/thread_data.o -I../readInTiff/src/ -I./include   -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/ -I/usr/include/gdal/ ../gdal/gdal-2.2.1/.libs/libgdal.so ../1597_searchEngineWrapper/Debug/src/1597_ipc_listener.o  -ltiff -lpthread
 
-./obj/tile_manager.o: ./src/tile_manager.cpp ./include/tile_manager.h
+./obj/tile_manager.o: ./src/tile_manager.cpp ./include/tile_manager.h ../GeoTiff_handler/src/GeoTiffHandler.o
 	$(CC) $(CFLAGS) -c ./src/tile_manager.cpp -o ./obj/tile_manager.o -I../readInTiff/src/ -I./include -I../gdal/gdal-2.2.1/gcore -I../gdal/gdal-2.2.1/port -I../gdal/gdal-2.2.1/ogr -I../GeoTiff_Handler/src -I../1597_searchEngineWrapper/src/ -I/usr/include/gdal/
 
 ./obj/tile_worker.o: ./src/tile_worker.cpp ./include/tile_worker.h
@@ -45,6 +45,9 @@ clean:
 
 ./bin/pcs.csv: ../gdal/gdal-2.2.1/data/pcs.csv
 	cp  ../gdal/gdal-2.2.1/data/pcs.csv ./bin
+
+../1597_searchEngineWrapper/Debug/src/1597_ipc_listener.o: ./lib/plane_library.a
+	$(MAKE) all -C ../1597_searchEngineWrapper/Debug/
 
 documentation: html/index.html
 
