.gitignore endlich mit eingecheckt. zusätzlich noch einige andere Dinge aufgeräumt, eingecheckt oder gelöscht. jetzt ist git status sauber.

--- a/src/Durchmusterung/Makefile
+++ b/src/Durchmusterung/Makefile
@@ -9,6 +9,8 @@ endif
 
 all: checkdir ./bin/landebahn documentation ./lib/plane_library.a 
 
+easylib: checkdir documentation ./lib/plane_library.a
+
 clean:
 	rm ./bin/landebahn || true
 	rm -rf latex || true
