- Vortragsskelett für LaTeX-Beamer erstellt und mit grober Kapitelstruktur erstellt

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ src/1597_LandingClient/bower_components/
 src/Durchmusterung/html/
 src/Durchmusterung/latex/
 
+/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.*
+
