searchengine-Überblick folien erstellt

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ vorgehensweise
 vorgehensweise*
 src/1597_LandingClient/bower_components/
 *~
+*~vsd
 src/Durchmusterung/html/
 src/Durchmusterung/latex/
 
