--- a/src/GeoTiff_Handler/src/Makefile
+++ b/src/GeoTiff_Handler/src/Makefile
@@ -1,8 +1,14 @@
 CC=g++ -std=c++11
 
-ifeq ("$(wildcard /usr/include/gdal/gdal_priv.h)","")
-    $(error tiff.h needed. This is usually in a package gdal-dev)
+ifeq ("$(wildcard /usr/include/x86_64-linux-gnu/tiff.h)","")
+    $(error tiff.h needed. This is usually in a package libtiff-dev)
 endif
+
+ifeq ("$(wildcard /usr/include/gdal/gdal_priv.h)","")
+    $(error gdal_priv.h needed. This is usually in a package gdal-dev)
+endif
+
+
 
 all: geotiff
 
