--- a/src/GeoTiff_Handler/src/Makefile
+++ b/src/GeoTiff_Handler/src/Makefile
@@ -1,12 +1,14 @@
 CC=g++ -std=c++11
 
-ifeq ("$(wildcard /usr/include/x86_64-linux-gnu/tiff.h)","")
-    $(error tiff.h needed. This is usually in a package libtiff-dev)
-endif
 
-ifeq ("$(wildcard /usr/include/gdal/gdal_priv.h)","")
-    $(error gdal_priv.h needed. This is usually in a package libgdal-dev)
-endif
+precheck:
+	ifeq ("$(wildcard /usr/include/x86_64-linux-gnu/tiff.h)","")
+    		$(error tiff.h needed. This is usually in a package libtiff-dev)
+	endif
+
+	ifeq ("$(wildcard /usr/include/gdal/gdal_priv.h)","")
+    		$(error gdal_priv.h needed. This is usually in a package libgdal-dev)
+	endif
 
 
 
@@ -15,11 +17,11 @@ all: geotiff
 geotiff: readInTiff.o GeoTiffHandler.o GeoTiffHandlerTest 
 
 
-readInTiff.o: readInTiff.c
+readInTiff.o: precheck readInTiff.c
 	$(CC) -c readInTiff.c -ltiff
 
-GeoTiffHandler.o: GeoTiffHandler.cpp
+GeoTiffHandler.o: precheck GeoTiffHandler.cpp
 	$(CC) -c GeoTiffHandler.cpp -I/usr/include/gdal
 
-GeoTiffHandlerTest: GeoTiffHandlerTest.cpp readInTiff.o
+GeoTiffHandlerTest: precheck GeoTiffHandlerTest.cpp readInTiff.o
 	$(CC) -o GeoTiffHandlerTest  GeoTiffHandlerTest.cpp GeoTiffHandler.o readInTiff.o -I/usr/include/gdal -ltiff -lgdal
