--- a/src/GeoTiff_Handler/src/Makefile
+++ b/src/GeoTiff_Handler/src/Makefile
@@ -1,7 +1,6 @@
 CC=g++ -std=c++11
 
 
-precheck:
 ifeq ("$(wildcard /usr/include/x86_64-linux-gnu/tiff.h)","")
 	$(error tiff.h needed. This is usually in a package libtiff-dev)
 endif
@@ -17,11 +16,11 @@ all: geotiff
 geotiff: readInTiff.o GeoTiffHandler.o GeoTiffHandlerTest 
 
 
-readInTiff.o: precheck readInTiff.c
+readInTiff.o: readInTiff.c
 	$(CC) -c readInTiff.c -ltiff
 
-GeoTiffHandler.o: precheck GeoTiffHandler.cpp
+GeoTiffHandler.o: GeoTiffHandler.cpp
 	$(CC) -c GeoTiffHandler.cpp -I/usr/include/gdal
 
-GeoTiffHandlerTest: precheck GeoTiffHandlerTest.cpp readInTiff.o
+GeoTiffHandlerTest: GeoTiffHandlerTest.cpp readInTiff.o
 	$(CC) -o GeoTiffHandlerTest  GeoTiffHandlerTest.cpp GeoTiffHandler.o readInTiff.o -I/usr/include/gdal -ltiff -lgdal
